--- a/package.json
+++ b/package.json
@@ -7,15 +7,25 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy": "git subtree push --prefix dist origin gh-pages && git push"
+    "deploy": "git subtree push --prefix dist origin gh-pages && git push",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
   },
   "dependencies": {
+    "@line/liff": "^2.23.2",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
+    "@mdi/font": "^7.4.47",
     "@vitejs/plugin-vue": "^5.0.5",
-    "vite": "^5.3.1"
+    "material-design-icons-iconfont": "^6.7.0",
+    "vite": "^5.3.1",
+    "vite-plugin-vuetify": "^2.0.3",
+    "vitepress": "^1.3.1",
+    "vuetify": "^3.6.13"
   }
 }
